Fix z-index of context

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -72,3 +72,4 @@ input
 .contextmenu
   position fixed
   visibility hidden
+  z-index 1500
